# promptimizer

./: .gitignore  README.md  pyproject.toml
src/promptim/: __main__.py  trainer.py  types.py
src/promptim/algorithms/: minibatch.py  mipro.py
src/promptim/algorithms/phaseevo/: algo.py  mutations.py
src/promptim/optimizers/: feedback_guided.py  fewshot.py  metaprompt.py
src/promptim/tasks/: metaprompt.py  simpleqa.py  ticket_classification.py
