[project]
name = "promptim"
version = "0.0.9"
description = "A framework for optimizing prompts through multi-task evaluation and iterative improvement"
authors = [
    { name = "William Fu-Hinthorn", email = "13333726+hinthornw@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click",
    "langchain",
    "langchain-groq @ git+https://github.com/Krish-Goyani/langchain-groq.git",
    "langchain-anthropic>=0.3",
    "langsmith @ git+https://github.com/Krish-Goyani/langsmith-sdk.git@main", 
    "langchain-openai>=0.3",
    "pandas>=0.2.4",
    "rich",
    "python-dotenv>=1.0.1",
    "trustcall>=0.0.28",
]

[project.scripts]
promptim = "promptim.__main__:cli"

[tool.setuptools]
packages = ["promptim"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "trustcall>=0.0.26",
    "vcrpy>=6.0.2",
]
